# sondera-coding-agent-hooks

./: .gitignore  CLAUDE.md  DESIGN.md  HANDOFF.md  README.md
apps/claude/: Cargo.toml
apps/claude/src/: main.rs
crates/harness/: Cargo.toml
crates/harness/src/: lib.rs  observability.rs  policy_engine.rs  policy_harness.rs  rpc.rs  types.rs
crates/harness/tests/: cedarling_api_gate.rs  cedarling_destructive.rs  cedarling_file_gate.rs  cedarling_ifc.rs  cedarling_policy_loading.rs  cedarling_prompt_injection.rs  cedarling_schema.rs  cedarling_shell_gate.rs  escalation_annotation.rs  escalation_store.rs  guardrail_wiring.rs  mandate_jwt.rs  mandate_policy_engine.rs  observability_config.rs  observability_metadata.rs  policy_engine_configuration.rs  scenario_browser.rs  scenario_email.rs  taint_propagation.rs  transform_action_mapping.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: gate.rs
design/: escalation.md  multi-agent-scenarios.md  opentelemetry-implementation-tracking.md  opentelemetry-observability.md
examples/github_copilot_cli_hooks/: README.md
examples/github_copilot_cli_hooks/fixtures/: preToolUse-deny.json
examples/github_copilot_cli_hooks/policies/: investment_cli_hooks.cedar
policies/: base.cedar  base.cedarschema  browser.cedar  communication.cedar  destructive.cedar  file.cedar  ifc.cedar  schema.json  supply_chain_risk.cedar
sondera-python/: pyproject.toml
sondera-python/sondera/: __init__.py  actions.py  aiogate.py  gate.py  langchain.py  observations.py  trajectory.py
sondera-python/tests/: test_aiogate.py  test_gate.py
(+15 files in other folders)
